--- a/Події.html
+++ b/Події.html
@@ -112,6 +112,49 @@ return false;
 	<table width="100%" class="table_news" style="table-layout:fixed;">
 	<td style="vertical-align: top; height: 100%; background: #F8F8F8 url(images/1345626990_olyas549.jpg) repeat;">
 	<div id="layer2">
+<p class="data" id="data" >
+    08.03.2018p. 
+ </p>
+
+<div class="fon_pod_rext_news" class="text">
+ <p>
+ <h2 class="Zagolovok">Свято восьмого березня в ДНЗ "Сонечко"</h2>
+ </p>
+ <p>
+ <h3 class="p0">
+ Сьогодні вихованці ДНЗ "Сонечко" вітали своїх мам і бабусь, вихователів з весняним святом!!!<br />
+ Більше інформаці Ви зможите прочитати <a class="tyt" href="https://www.facebook.com/permalink.php?story_fbid=193313788099658&id=100022631136959" target="_blank">тут</a></p>
+ </div>
+<div>
+ <table class="gallery" align="center" style="border-collapse: collapse;">
+			<tr>
+			<td style="text-align:center;"><a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(1).jpg" 
+			title="Фотографія 1"><img src="gallery_img/new/08.03.2018/08_03_2018(1).jpg" width="130px" height="150px" alt="" /></a>
+		    <a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(2).jpg" 
+			title="Фотографія 2"><img src="gallery_img/new/08.03.2018/08_03_2018(2).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(3).jpg" 
+			title="Фотографія 3"><img src="gallery_img/new/08.03.2018/08_03_2018(3).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(4).jpg" 
+			title="Фотографія 4"><img src="gallery_img/new/08.03.2018/08_03_2018(4).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(5).jpg" 
+			title="Фотографія 5"><img src="gallery_img/new/08.03.2018/08_03_2018(5).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(6).jpg" 
+			title="Фотографія 6"><img src="gallery_img/new/08.03.2018/08_03_2018(6).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(7).jpg" 
+			title="Фотографія 7"><img src="gallery_img/new/08.03.2018/08_03_2018(7).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(8).jpg" 
+			title="Фотографія 8"><img src="gallery_img/new/08.03.2018/08_03_2018(8).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(9).jpg" 
+			title="Фотографія 9"><img src="gallery_img/new/08.03.2018/08_03_2018(9).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(10).jpg" 
+			title="Фотографія 10"><img src="gallery_img/new/08.03.2018/08_03_2018(10).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(11).jpg" 
+			title="Фотографія 11"><img src="gallery_img/new/08.03.2018/08_03_2018(11).jpg" width="130px" height="150px" alt="" /></a>
+			<a rel="gallery" class="photo" href="gallery_img/new/08.03.2018/08_03_2018(12).jpg" 
+			title="Фотографія 12"><img src="gallery_img/new/08.03.2018/08_03_2018(12).jpg" width="130px" height="150px" alt="" /></a></td>
+			</tr>						
+			</table>
+</div>
 	
 <p class="data" id="data" >
     26.02.2018p. 
