--- a/Події.html
+++ b/Події.html
@@ -126,26 +126,26 @@ return false;
  Сьогодні відбулася дружня гра з волейболу між молодіжними збірними сіл Гречанівка та Сватки.</p>
  </div>
 <div>
- <table class="gallery" align="center" style="border-collapse: collapse;">
+ <table class="gallery" align="center" style="border-collapse: collapse;" width="90%">
 			<tr>
-			<td style="text-align:right;"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(1).jpg" 
-			title="Фотографія 1"><img src="gallery_img/new/22.03.2018/22_03_2018(1).jpg" width="224px" height="183px" alt="" /></a>
+			<td width="33%" align="right"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(1).jpg" 
+			title="Фотографія 1"><img src="gallery_img/new/22.03.2018/22_03_2018(1).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(2).jpg" 
-			title="Фотографія 2"><img src="gallery_img/new/22.03.2018/22_03_2018(2).jpg" width="224px" height="183px" alt="" /></a><br />
+			title="Фотографія 2"><img src="gallery_img/new/22.03.2018/22_03_2018(2).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(3).jpg" 
-			title="Фотографія 3"><img src="gallery_img/new/22.03.2018/22_03_2018(3).jpg" width="224px" height="183px" alt="" /></a></td>
-			<td style="text-align:left;"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(4).jpg" 
-			title="Фотографія 4"><img src="gallery_img/new/22.03.2018/22_03_2018(4).jpg" width="224px" height="183px" alt="" /></a><br />
+			title="Фотографія 3"><img src="gallery_img/new/22.03.2018/22_03_2018(3).jpg" width="80%" height="12%" alt="" /></a></td>
+			<td width="33%" align="center"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(4).jpg" 
+			title="Фотографія 4"><img src="gallery_img/new/22.03.2018/22_03_2018(4).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(5).jpg" 
-			title="Фотографія 5"><img src="gallery_img/new/22.03.2018/22_03_2018(5).jpg" width="224px" height="183px" alt="" /></a><br />
+			title="Фотографія 5"><img src="gallery_img/new/22.03.2018/22_03_2018(5).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(6).jpg" 
-			title="Фотографія 6"><img src="gallery_img/new/22.03.2018/22_03_2018(6).jpg" width="224px" height="183px" alt="" /></a></td>
-			<td style="text-align:left;"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(7).jpg" 
-			title="Фотографія 7"><img src="gallery_img/new/22.03.2018/22_03_2018(7).jpg" width="224px" height="183px" alt="" /></a>
+			title="Фотографія 6"><img src="gallery_img/new/22.03.2018/22_03_2018(6).jpg" width="80%" height="12%" alt="" /></a></td>
+			<td width="33%" align="left"><a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(7).jpg" 
+			title="Фотографія 7"><img src="gallery_img/new/22.03.2018/22_03_2018(7).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(8).jpg" 
-			title="Фотографія 8"><img src="gallery_img/new/22.03.2018/22_03_2018(8).jpg" width="224px" height="183px" alt="" /></a><br />
+			title="Фотографія 8"><img src="gallery_img/new/22.03.2018/22_03_2018(8).jpg" width="80%" height="12%" alt="" /></a><br />
 			<a rel="gallery" class="photo" href="gallery_img/new/22.03.2018/22_03_2018(9).jpg" 
-			title="Фотографія 9"><img src="gallery_img/new/22.03.2018/22_03_2018(9).jpg" width="224px" height="183px" alt="" /></a></td>
+			title="Фотографія 9"><img src="gallery_img/new/22.03.2018/22_03_2018(9).jpg" width="80%" height="12%" alt="" /></a></td>
 			</tr>						
 			</table>
 </div>
